# image-ssl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  submission.csv
.github/workflows/: lint.yaml  pre-commit.yaml
eval/testset_1/: create_submission_knn.py  create_submission_linear.py
eval/testset_2/: create_submission_knn.py  create_submission_linear.py  pyproject.toml  submission.csv
eval/testset_3/: create_submission_linear.py
src/: __init__.py  eval.py  pretrain.py
src/dataset/: __init__.py  dataset.py  loader.py  transform.py
src/models/: __init__.py  dino.py  pretraining.py  transformer.py  vit.py
src/models/modules/: __init__.py  attention.py  dino.py  drop_path.py  mlp.py  patch.py
src/sh/: pretrain.sh
src/slurm/: pretrain.slurm
src/trainers/: __init__.py  base.py  pretraining.py
src/trainers/losses/: __init__.py  dino.py  dino_loss.py
src/trainers/schedulers/: __init__.py  momentum.py  weight_decay.py
src/training/: __init__.py  base.py  train.py
src/utils/: __init__.py  compute_dataset_statistics.py  compute_dataset_stats.py  parser.py
