[project]
name = "testset-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "huggingface-hub>=1.2.1",
    "learn2learn>=0.2.0",
    "numpy<2",
    "pandas>=2.3.3",
    "safetensors>=0.7.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
